# vscode_project_for_cpp

./: .gitignore  RAEDME.md  README.md  project3.cpp
C++algo/: demo.cpp
Classtadest/: Fu.hpp  demo.cpp
MyArrayList/: arrayList.cpp  arrayList.hpp  demo.cpp
Project(3)/: manager.h  mode.cpp  seller.h  sellerPerson.h
Project01/: high.cpp  high.hpp
camera_test/: demo.cpp  thread_test.hpp
carTest/: car.cpp  car.h  demo.cpp  high.cpp  high.h
classPerson/: Person.cpp  Person.h  Top.h  demo.cpp  top.cpp
classProject02/: Circle.h  Rectangle.h  Shape.h  demo.cpp
classTest01/: animal.h  main.cpp  mammal.h
code01/: demo.cpp
demoTest/: test.cpp
folder/: main.cpp  (+2 more)
importantProject/: CMakeLists.txt  demo.cpp
importantProject/include/: person.h  sellerManager.h  technical.h
reportFile_cpp/: CMakeLists.txt  demo.cpp
reportFile_cpp/test-1/test-class-1/: demo.cpp
reportFile_cpp/test-1/test-class-2/: demo.cpp
reportFile_cpp/test-10/: demo.cpp
reportFile_cpp/test-2/test-class-1/: demo.cpp
reportFile_cpp/test-2/test-class-2/test-class-s1/: demo.cpp
reportFile_cpp/test-2/test-class-2/test-class-s2/: demo.cpp
reportFile_cpp/test-2/test-class-3/: demo.cpp
reportFile_cpp/test-3/: Person.cpp  Person.h  demo.cpp
reportFile_cpp/test-4/: Person.cpp  Person.h  Top.cpp  Top.h  demo.cpp
reportFile_cpp/test-5/: Rect.cpp  Rect.h  demo.cpp
reportFile_cpp/test-6/: Circle.h  Rectangle.h  Shape.h  demo.cpp
reportFile_cpp/test-7/: CMakeLists.txt  animal.h  demo.cpp  mammal.h
reportFile_cpp/test-8/: CMakeLists.txt  arrayList.cpp  arrayList.h  demo.cpp
(+83 files in other folders)
